--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,11 +21,11 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="footer-col footer-col-4">
         {%- include social.html -%}
       </div>
 
-      <div class="footer-col footer-col-3">
+      <div class="footer-col">
         <p>{{- site.description | escape -}}</p>
       </div>
     </div>
