--- a/assets/css/songLayout.css
+++ b/assets/css/songLayout.css
@@ -19,19 +19,18 @@
     border: 1px groove rgb(89, 197, 89);    
 }
 
-.video iframe {
+.iframe {
     padding: 10px;
     max-width: 100%; /* Ensures the container and iframe are responsive */
     width: 100%; /* Adjust as needed */
     max-height: 100%;
-    height: 336px;
     display: block; /* Center align the div */
 }
 
 .lyrics {
     padding: 10px;
-    background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); 
+    //background: rgb(131,58,180);
+    //background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); 
     border: 1px solid #cfdd4c;
     max-width: 100%; /* Ensures the container and iframe are responsive */
     width: 600px; /* Adjust as needed */
