--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -9,20 +9,24 @@
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="post-content e-content" itemprop="articleBody">
+        <div class="post-content e-content" itemprop="articleBody"
+          style="display: none;">
           {{ content }}
         </div>
-        {% assign song = site.data.songs | where: "name", page.song_name | first %}
+        {% assign song = site.data.songs | where: "name", page.song_name | first
+        %}
 
         <div class="video">
-          <iframe src="{{ song.youtube }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="{{ song.youtube }}" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
 
         <h2>{{ song.name }}</h2>
         <p>Artist: {{ song.artist }}</p>
         <p>Tuning: {{ song.tuning }}</p>
 
-        <div class="lyrics" id="lyricsContainer">
+        <div class="songs" id="songs">
           <!-- The lyrics will be populated by the JavaScript function -->
         </div>
       </div>
@@ -30,18 +34,19 @@
 
     {%- include footer.html -%}
 
-    <!-- Include external CSS and JavaScript files -->
-    <link rel="stylesheet" href="{{ '/assets/css/songLayout.css' | relative_url }}">
-    <script src="{{ '/assets/js/songLayout.js' | relative_url }}"></script>
-    
+    <!-- Include external CSS file -->
+    <link rel="stylesheet" href="/assets/css/songLayout.css">
+    <script src="/assets/js/songLayout.js"></script>
+
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const inputString = `{{ song.lyrics | escape }}`;
-            createLyricLinesFromInput(inputString);
-        });
+      document.addEventListener('DOMContentLoaded', function() {
+          const rawContent = document.querySelector('.post-content').innerHTML.trim();
+          const decodedContent = htmlEntityDecode(rawContent);
+          const strippedContent = stripPTagsAndBrTags(decodedContent);
+          console.log(strippedContent);
+          renderSong(strippedContent);
+      });
     </script>
 
-
   </body>
-
 </html>
