--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -61,7 +61,7 @@
             allowfullscreen></iframe>
         </div>
 
-        <h2>{{ song.name }}</h2>
+        <h2>{{ page.name }}</h2>
         <p>Artist: {{ page.artist }}</p>
         <p>Tuning: {{ page.tuning }}</p>
 
