--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -42,6 +42,11 @@
         /* margin : .3em; */
         /* border: 1px solid cyan; */
     }
+
+video {
+width: 100%;
+aspect-ratio: 16/9;
+}
     </style>
   </head>
   <body>
