--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -43,10 +43,20 @@
         /* border: 1px solid cyan; */
     }
 
-div.video {
-width: 100%;
-aspect-ratio: 16/9;
-}
+    div.video-container {
+        display: relative;
+        width: 100%;
+        aspect-ratio: 16/9;
+    }
+
+    .video-container iframe {
+        display: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
     </style>
   </head>
   <body>
@@ -60,7 +70,7 @@ aspect-ratio: 16/9;
           {{ content }}
         </div>
 
-        <div class="video">
+        <div class="video-container">
           <iframe src="{{ page.youtube }}" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
