--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -3,61 +3,7 @@
 
   {%- include head.html -%}
   <head>
-    <style>
-      div.part {
-      display: flex;
-      flex-direction: column;
-      float  : left;
-      justify-content: flex-end;
-      margin : .3em;
-      /* border: 1px solid red; */
-    }
-    div.chord {
-        text-align  : left;
-        font-weight : bolder;
-        font-style  : italic;
-        /* margin : .3em; */
-        /* border: 1px solid green; */
-    }
-    div.lyric {
-        text-align  : left;
-        /* margin : .3em; */
-        /* border: 1px solid blue; */
-    }
-
-    div.lyrics-line {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: flex-start;
-        margin : .3em;
-        /* border: 1px solid goldenrod; */
-    }
-
-    div.songs {
-        display: inline-flex;
-        justify-content: flex-start;
-        flex-wrap: nowrap;
-        flex-direction: column;
-        /* margin : .3em; */
-        /* border: 1px solid cyan; */
-    }
-
-    div.video-container {
-        display: relative;
-        width: 100%;
-        aspect-ratio: 16/9;
-    }
-
-    .video-container iframe {
-        display: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    </style>
+    <link rel="stylesheet" href="{{ "/assets/css/songLayout.css" | relative_url }}">
   </head>
   <body>
 
@@ -88,92 +34,8 @@
 
     {%- include footer.html -%}
 
+    <script src="{{ "/assets/js/songLayout.js" | relative_url }}"></script>
     <script>
-      function renderLyrics(line) {
-          let parts = line.split(/(\[[^\]]+\])/).filter(Boolean); // Split parts and filter out empty strings
-
-          let lyricsLineDiv = document.createElement('div');
-          lyricsLineDiv.className = 'lyrics-line';
-
-          for (let i = 0; i < parts.length; i++) {
-              if (parts[i].startsWith('[')) {
-                  // Chord
-                  let chord = parts[i].substring(1, parts[i].length - 1); // Remove []
-
-                  // Lyrics part should follow the chord (if exists)
-                  let lyrics = '';
-                  if (i + 1 < parts.length) {
-                      lyrics = parts[i + 1].trim(); // Trim whitespace
-                      i++; // Move to the next part (lyrics)
-                  }
-
-                  // Create part div
-                  let partDiv = document.createElement('div');
-                  partDiv.className = 'part';
-
-                  // Create chord div
-                  let chordDiv = document.createElement('div');
-                  chordDiv.className = 'chord';
-                  chordDiv.textContent = chord;
-                  partDiv.appendChild(chordDiv);
-
-                  // Create lyric div and append
-                  let lyricDiv = document.createElement('div');
-                  lyricDiv.className = 'lyric';
-                  lyricDiv.textContent = lyrics;
-                  partDiv.appendChild(lyricDiv);
-
-                  // Append part div to lyricsLineDiv
-                  lyricsLineDiv.appendChild(partDiv);
-              } else {
-                  // No chord specified, treat entire part as lyrics
-                  let lyrics = parts[i].trim();
-
-                  // Create part div
-                  let partDiv = document.createElement('div');
-                  partDiv.className = 'part';
-
-                  // Create empty chord div
-                  // let chordDiv = document.createElement('div');
-                  // chordDiv.className = 'chord';
-                  // chordDiv.textContent = '\u00A0'; // Use &nbsp; for empty chord
-                  // partDiv.appendChild(chordDiv);
-
-                  // Create lyric div and append
-                  let lyricDiv = document.createElement('div');
-                  lyricDiv.className = 'lyric';
-                  lyricDiv.textContent = lyrics;
-                  partDiv.appendChild(lyricDiv);
-
-                  // Append part div to lyricsLineDiv
-                  lyricsLineDiv.appendChild(partDiv);
-              }
-          }
-
-          return lyricsLineDiv;
-      }
-
-      function renderSong(input) {
-          let lines = input.split('\n').map(line => line.trim()).filter(line => line !== ''); // Split by lines, trim whitespace, and filter out empty lines
-
-          let songsDiv = document.getElementById('songs');
-          songsDiv.innerHTML = ''; // Clear any existing content
-
-          lines.forEach(line => {
-              let lyricsLineDiv = renderLyrics(line);
-              songsDiv.appendChild(lyricsLineDiv);
-          });
-      }
-
-      function htmlEntityDecode(html) {
-          var txt = document.createElement('textarea');
-          txt.innerHTML = html;
-          return txt.value;
-      }
-
-      function stripPTagsAndBrTags(html) {
-          return html.replace(/<\/?p>/g, '').replace(/<br\s*\/?>/g, '');
-      }
       document.addEventListener('DOMContentLoaded', function() {
           const rawContent = document.querySelector('.post-content').innerHTML.trim();
           const decodedContent = htmlEntityDecode(rawContent);
