--- a/assets/css/songLayout.css
+++ b/assets/css/songLayout.css
@@ -1,38 +1,52 @@
 div.part {
-    display: flex;
-    flex-direction: column;
-    float  : left;
-    justify-content: flex-end;
-    margin : .3em;
-    /* border: 1px solid red; */
+display: flex;
+flex-direction: column;
+float  : left;
+justify-content: flex-end;
+margin : .3em;
+/* border: 1px solid red; */
 }
 div.chord {
-    text-align  : left;
-    font-weight : bolder;
-    font-style  : italic;
-    margin : .3em;
-    /* border: 1px solid green; */
+  text-align  : left;
+  font-weight : bolder;
+  font-style  : italic;
+  /* margin : .3em; */
+  /* border: 1px solid green; */
 }
 div.lyric {
-    text-align  : left;
-    margin : .3em;
-    /* border: 1px solid blue; */
+  text-align  : left;
+  /* margin : .3em; */
+  /* border: 1px solid blue; */
 }
 
 div.lyrics-line {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin : .3em;
-    /* border: 1px solid goldenrod; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin : .3em;
+  /* border: 1px solid goldenrod; */
 }
 
 div.songs {
-    display: inline-flex;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    margin : .3em;
-    /* border: 1px solid cyan; */
+  display: inline-flex;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  /* margin : .3em; */
+  /* border: 1px solid cyan; */
+}
+
+div.video-container {
+  display: relative;
+  width: 100%;
+  aspect-ratio: 16/9;
+}
+
+.video-container iframe {
+  display: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
