--- a/assets/style.css
+++ b/assets/style.css
@@ -25,3 +25,7 @@ body {
     background-size: cover; /* Cover the entire background */
     background-attachment: fixed; /* Make the background fixed */
 }
+
+.wrapper {
+    background-color: rgba(250, 235, 215, 0.5); /* antiquewhite with 50% transparency */
+}
