--- a/_layouts/cv_en.html
+++ b/_layouts/cv_en.html
@@ -119,7 +119,7 @@
         <h1>Huynh Tran Hong Nhat</h1>
         
         <h2>Education</h2>
-        <p>Bachelor's Degree, Ho Chi Minh University of Science</p>
+        <p>Bachelor's Degree in Computer and Embedded Systems, Ho Chi Minh University of Science</p>
         
         <div class="skills">
             <div class="section-title">Skills</div>
