--- a/_layouts/cv_ja.html
+++ b/_layouts/cv_ja.html
@@ -119,7 +119,7 @@
         <h1>Huỳnh Trần Hồng Nhật</h1>
         
         <h2>学歴</h2>
-        <p>ホーチミン市科学大学 卒業</p>
+        <p>ホーチミン市科学大学 コンピュータ及び組み込みシステム専攻 2019年 卒業</p>
         
         <div class="skills">
             <div class="section-title">スキル</div>
