--- a/_layouts/cv_en.html
+++ b/_layouts/cv_en.html
@@ -21,13 +21,20 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .profile {
+            display: flex;
+            justify-content: flex-start;
+            margin-bottom: 30px;
+        }
+        .profile {
+            display: flex;
+            justify-content: flex-start;
             text-align: center;
             margin-bottom: 30px;
         }
         .profile img {
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
+            border-radius: 70%;
+            width: 300px;
+            height: 300px;
             object-fit: cover;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
@@ -67,18 +74,21 @@
             text-transform: uppercase;
             letter-spacing: 1.5px;
         }
-        .skills, .experience, .projects {
+        .profile {
+            border: cyan;
+        }
+        .skills, .experience, .projects .education {
             margin-bottom: 40px;
         }
-        .skills ul, .experience ul, .projects ul {
+        .skills ul, .experience ul, .projects ul .education {
             margin-left: 20px;
         }
-        .skills ul li, .projects ul li {
+        .skills ul li, .projects ul li .education {
             margin-bottom: 10px;
             padding-left: 10px;
             position: relative;
         }
-        .skills ul li::before, .projects ul li::before {
+        .skills ul li::before, .projects ul li::before .education {
             content: '•';
             color: #e74c3c;
             position: absolute;
@@ -113,13 +123,23 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="path/to/your/profile-picture.jpg" alt="Huỳnh Trần Hồng Nhật Profile Picture">
+            <img src="../images/profile.jpg" alt="Huỳnh Trần Hồng Nhật Profile Picture">
+            <div class="infomation">
+                <h1 class="name">Huynh Tran Hong Nhat</h1>
+                <p class="email">Email: nhatcomnhom@gmail.com</p>
+                <p class="address">Address: 739-0142<br>
+                    広島県, 東広島市八本松東3丁目7-12<br>
+                    ほんどう企画AP1 - 103号室
+                </p>
+                <p class="phone">Phone number: 080 7801 0339</p>
+            </div>
+        
+
         </div>
-        
-        <h1>Huynh Tran Hong Nhat</h1>
-        
-        <h2>Education</h2>
-        <p>Bachelor's Degree in Computer and Embedded Systems in 2019, Ho Chi Minh University of Science</p>
+        <div class="education">
+            <div class="section-title">Education</div>
+            <p>Bachelor's Degree in Computer and Embedded Systems in 2019, Ho Chi Minh University of Science</p>
+        </div>
         
         <div class="skills">
             <div class="section-title">Skills</div>
