--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
         <div class="trigger">
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title and my_page.permalink != "/cv/" and my_page.permalink != "/cv_ja/" -%}
+            {%- if my_page.title and my_page.permalink != "/cv/" and my_page.permalink != "/cv_ja/" and my_page.permalink != "/mom_family_tree/" -%}
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
