--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -8,6 +8,7 @@
   <body>
 
     {%- include header.html -%}
+    {%- include chord_data.html -%} <!-- Thêm dòng này -->
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
